css updates > list-style-type: none

--- a/google.css
+++ b/google.css
@@ -1,9 +1,15 @@
+
 .navbar {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  list-style-type: none;
+  margin: 20px;
+  padding: 25px;
   justify-content: flex-end;
 }
+
+.navbar ul {
+  list-style-type: none;
+}
+
 
 /*# sourceMappingURL=google.css.map */
