--- a/google.css
+++ b/google.css
@@ -1,16 +1,18 @@
 
-.navbar-main {
+.navbar {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   justify-content: flex-end;
 }
 
-.navbar > ul li{
+.navbar ul {
+  display: flex;
   list-style-type: none;
-  margin: 20px;
-  padding: 25px;
 }
+
+.navbar ul li {
+  margin-right: 10px;
+}
+
 
 
 /*# sourceMappingURL=google.css.map */
