--- a/google.css
+++ b/google.css
@@ -6,7 +6,7 @@
   justify-content: flex-end;
 }
 
-.navbar > ul li{
+.navbar-main > ul li{
   flex-direction: row;
   list-style-type: none;
   margin: 20px;
