--- a/google.css
+++ b/google.css
@@ -5,7 +5,7 @@
   justify-content: flex-end;
 }
 
-.navbar > li ul {
+.navbar-main > li ul {
   list-style-type: none;
   margin: 0px;
   padding: 25px;
