--- a/google.css
+++ b/google.css
@@ -1,6 +1,15 @@
 .navbar-main {
   display: flex;
+  flex-direction: row;
   list-style-type: none;
+}
+
+.navbar-link {
+  
+}
+
+.search-bar {
+
 }
 
 
